Fix width overflow issue

--- a/TRPortfolio.Client/Layout/MainLayout.razor.css
+++ b/TRPortfolio.Client/Layout/MainLayout.razor.css
@@ -7,6 +7,8 @@
 
 main {
     flex: 1;
+    width: 100%;
+    overflow-x: hidden;
     overflow-y: auto;
     max-height: 100vh;
 }
